@@ -1,0 +1,15 @@
+GLADE_FILES = \
+	$(srcdir)/giver-prefs.glade 
+
+GLADEDIR = $(DESTDIR)$(datadir)/giver/glade
+
+install-exec-local: all
+	$(mkinstalldirs) $(GLADEDIR)
+	$(INSTALL_PROGRAM) $(GLADE_FILES) $(GLADEDIR)
+
+uninstall-local:
+	rm -rf $(GLADEDIR)
+
+EXTRA_DIST = \
+	$(GLADE_FILES) 
+
